Use generic company name instead of my other company

--- a/basic-mvt/templates/base.templ
+++ b/basic-mvt/templates/base.templ
@@ -7,7 +7,7 @@ templ Base(content templ.Component) {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-			<title>The Crafty Bottle</title>
+			<title>Your Company</title>
 			<link rel="icon" href="./favicon.ico" type="image/x-icon"/>
 			<link href="/static/main.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@1.9.7" integrity="sha384-EAzY246d6BpbWR7sQ8+WEm40J8c3dHFsqC58IgPlh4kMbRRI6P6WA+LA/qGAyAu8" crossorigin="anonymous"></script>
